# DraftCoffee

./: README.md
draft-coffee-a2a/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
draft-coffee-a2a/src/: __init__.py  __main__.py  categorizer.py  fetcher.py  mail.py  mantha_toolset.py  openai_agent.py  openai_agent_executor.py  pipeline.py  plotter.py  report.py  transformer.py
